<resources>

    <string name="app_name">FRC Inventory</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">FRC Inventory</string>
    <string name="add_button">Add</string>
    <string name="viewButton">View</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_Button">Delete</string>
    <string name="filter_button">Filter</string>
    <string name="resetFilter">Reset Filter</string>
    <string name="editButton">Edit</string>
    <string name="buttonEditView">Edit</string>
    <string name="saveButton">Save</string>

</resources>